# nimble-engine-client

./: .gitignore  CMakeLists.txt  README.md  deps.toml
.github/workflows/: build_emscripten.yml  build_linux.yml  build_macos.yml
src/: CMakeLists.txt
src/include/nimble-engine-client/: client.h
src/lib/: CMakeLists.txt  engine_client.c
